Moved from java 11 to java 8 since I need to use the system ClassLoader to dynamically load jar files and since version 9 it is not URLClassLoader anymore.